fixed background scrolling issues on desktop and mobile device, adjusted the css behind the reset button on Contact me

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,8 @@ body {
 
   /* Visual */
   background-image: url("../imgs/background.jpg");
-  background-size: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 html {
@@ -193,7 +194,7 @@ input[type=text], select, textarea {
 input[type=submit] {
   background-color: darkslategrey;
   color: white;
-  padding: 12px 20px;
+  padding: 12px 20px 12px 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -201,11 +202,10 @@ input[type=submit] {
 input[type=reset] {
   background-color: darkslategrey;
   color: white;
-  padding: 12px 20px;
+  padding: 12px 20px 12px 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  margin-left: 5px;
 }
 
 /* When moving the mouse over the submit button, add a darker green color */
@@ -230,6 +230,10 @@ input[type=reset]:hover {
   .column, input[type=submit] {
     width: 100%;
     margin-top: 0;
+  }
+  .column, input[type=reset] {
+    width: 100%;
+    margin-top: 5px;
   }
 }
 
